src/test/deca/context/valid/minus_intvar_int_minus_intvar_context.deca
// Description : 
// 
//      Test contextuellement correct de la soustraction d'un int et d'une variable int
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    int x=3;
    int y= 3-x;
}