src/test/deca/context/invalid/ineq_string_ineq_string.deca
// Description :
// 
//      Test syntaxiquement correct de "Bonjour"!="Bonjour"
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = "Bonjour"!=3;
}

